WFLY-10209] added a function for appclient.ps1 usage